--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+actix-http = "3.0.0-beta.15"
+actix-web = "4.0.0-beta.14"
+
+[dev-dependencies]
+actix-rt = "2.5.0"
+reqwest = "0.11"
+tokio = "1.14.0"
