--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,13 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+path = "src/lib.rs"
+
+[[bin]]
+path = "src/main.rs"
+name = "zero2prod"
+
 [dependencies]
 actix-http = "3.0.0-beta.15"
 actix-web = "4.0.0-beta.14"
@@ -12,4 +19,4 @@ actix-web = "4.0.0-beta.14"
 [dev-dependencies]
 actix-rt = "2.5.0"
 reqwest = "0.11"
-tokio = "1.14.0"
+tokio = "1"
