--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,8 +15,23 @@ name = "zero2prod"
 [dependencies]
 actix-http = "3.0.0-beta.15"
 actix-web = "4.0.0-beta.14"
+config = "0.11.0"
+serde = { version = "1.0.132", features = ["derive"]}
 
 [dev-dependencies]
 actix-rt = "2.5.0"
 reqwest = "0.11"
 tokio = "1"
+
+# Using table-like toml syntax to avoid a super-long line! 
+[dependencies.sqlx]
+version = "0.5.7"
+default-features = false
+features = [ 
+  "runtime-actix-rustls", 
+  "macros",
+  "postgres",
+  "uuid",
+  "chrono",
+  "migrate"
+]
