--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,8 @@ actix-http = "3.0.0-beta.15"
 actix-web = "4.0.0-beta.14"
 config = "0.11.0"
 serde = { version = "1.0.132", features = ["derive"]}
+uuid = { version = "0.8.1", features = ["v4"] } 
+chrono = "0.4.15"
 
 [dev-dependencies]
 actix-rt = "2.5.0"
