--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,9 +19,18 @@ config = "0.11.0"
 serde = { version = "1.0.132", features = ["derive"]}
 uuid = { version = "0.8.1", features = ["v4"] } 
 chrono = "0.4.15"
+tracing = { version = "0.1", features = ["log"] }
+tracing-futures = "0.2.5"
+tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
+tracing-bunyan-formatter = "0.2.0"
+tracing-log = "0.1.2"
+tracing-actix-web = "0.5.0-beta.7"
+secrecy = { version = "0.8", features = ["serde"] }
+
 
 [dev-dependencies]
 actix-rt = "2.5.0"
+once_cell = "1.9.0"
 reqwest = "0.11"
 tokio = "1"
 
